fix(export): stretch format trigger

--- a/src/pages/ExportPage.scss
+++ b/src/pages/ExportPage.scss
@@ -2877,6 +2877,17 @@
   margin-left: auto;
 }
 
+.dialog-format-trigger {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.dialog-format-trigger-label {
+  flex: 1;
+  min-width: 0;
+  text-align: left;
+}
+
 .dialog-format-dropdown {
   position: absolute;
   top: calc(100% + 6px);
